@@ -371,3 +371,5 @@
 2009-12-03
 	* libstruct/config.c: bug fixed in function 'trim'. Tabs were not
 		deleted at the beginning and end of strings.
+	* libstruct/cachesystem.c: TLB section set as optional in cache
+		configuration file.
